# minipng

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  check-size.sh  pre-commit  test-all.sh
.cargo/: config.toml
benches/: bench.rs
examples/: alloc_correct.rs  basic.rs  example.rs  profile.rs  small.rs  test.rs  very_basic.rs
examples/wasm-minipng/: Cargo.toml
examples/wasm-minipng/src/: lib.rs
examples/wasm-png/: Cargo.toml
examples/wasm-png/src/: lib.rs
examples/wasm-tiny-png/: Cargo.toml
examples/wasm-tiny-png/src/: lib.rs
src/: lib.rs  test.rs
