[package]
name = "minipng"
description = "Tiny PNG decoder with no dependencies"
repository = "https://github.com/pommicket/minipng"
categories = ["encoding", "graphics", "multimedia::images", "no-std::no-alloc"]
keywords = ["png", "decoder", "image", "no_std", "no_alloc"]
license = "0BSD"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
png = "0.17.10"
png-decoder = "0.1.1"

[features]
default = []
adler = []

[[bench]]
name = "bench"
harness = false
